--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <button class="btn btn-primary" id="add-train-btn" type="submit">Submit</button>
               </form>
 
-       <script src="timesheet.js"></script>
+       <script src="assets/timesheet.js"></script>
 
   </div>
 </body>
